[tool.poetry]
name = "debit-scheduler-takehome"
version = "0.1.0"
description = ""
authors = ["Dante Monaldo <dmonaldo@earnup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
werkzeug = "^2.3.8"
freezegun = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
